<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PrimeraApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="onred">black on red</string>
    <string name="ongreen">update Text</string>
    <string name="wrap">wrap</string>
    <string name="fill">fill</string>    
    <string name="deg1">DE</string>    
    <string name="deg2">GRA</string>    
    <string name="deg3">DA</string>    
    <string name="deg4">DO</string>    
    <string name="texto_row1">Prueba1</string>
    <string name="texto_row2">Prueba2</string>
    <string name="texto_row3">Prueba3</string>
    <string name="texto_row4">Prueba4</string>
    <string name="titulo">Titulo</string>
    <string name="tituloV">Titulo Verde</string>
    <string name="textoVerde">Esto es un texto que no me acuerdo como es</string>
    <string name="localizame">Localizame!</string>    
    <string name="boton1">Ver perfil</string>
    <string name="boton2">Cargar Info</string>
    <string name="boton3">Actualizar</string>
    <string name="url">www.estoesunaprueba.com/visitanuestraweb</string>
    
</resources>